--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -175,6 +175,20 @@
   border: 1px solid #ECECEB !important;
 }
 
+.refreshIconSpin {
+  display: inline-flex;
+  animation: refreshSpin 0.6s ease-in-out forwards;
+}
+
+@keyframes refreshSpin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .btnAddPrimary {
   background: #2563eb;
   color: #fff;
